--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 <body>
     <header>
         <h1>The Elegant Hanbok</h1>
+        <img src="images/hanbok.jpg" alt="girl wearing pink hanbok holding an umbrella" width="500" height="400">
     </header>
+    <nav>
+       <ul class="main-nav">
+        <li><a href="pages/Etmology.html">Etmology</a></li>
+        <li><a href="pages/Construction-and-design.html">Construction and design</a></li>
+        <li><a href="pages/Occasions.html">Occasions</a></li>
+        <li><a href="pages/History.html">History</a></li>
+        <li><a href="pages/Modern-usage.html">Modern usage</a></li>
+        <li><a href="pages/Social-status.html">Social status</a></li>
+       </ul>
+    </nav>
     <main>
-        <p>The <strong>hanbok</strong> also called <strong>Choson-ot</strong> in North Korea and China, is an umbrella
+        <p>The <strong>hanbok</strong> also called <b>Choson-ot</b> in North Korea and China, is an umbrella
         term which is used to refer to traditional ethnic Korean clothes, including the traditional colthing of 
         the <i>chaoxianzu</i>(korean chinese), an officially recognized ethnic minority in China</p>
         <p>The term <i>"hanbok"</i> literally means "Korean clothing"</p> 
@@ -22,9 +33,15 @@
         The basic structure of <i>hanbok</i> was designed to facilitate the ease of movement and integrated many motifs of Mu-ism.
         These basic structural features of the <i>hanbok</i> remains relatively unchanged to this day.</p>
         <p>However, present-day <i>hanbok</i>, which is worn nowadays, i patterened after the <i>hanbok</i> worn in the Joseon Dynasty
-        especially those worn by the nobility and royalty</p>
-        
+        especially those worn by the nobility and royalty.</p>
     </main>
+
+
+
+    <footer>
+        <p>© 2022 For Gymnasium Project<br> The text content of this site was borrowed from <a href="https://en.wikipedia.org/wiki/Hanbok">
+            the wikipedia article on Hanbok</a></p>
+    </footer>
   
 </body>
 </html>
