--- a/pages/Etmology.html
+++ b/pages/Etmology.html
@@ -20,7 +20,12 @@
      <li><a href="./Social-status.html">Social status</a></li>
     </ul>
  </nav>
-
+ <main>
+    <p>The first recorded evidence of the name hanbok is from an 1881 document Jeongchiilgi《정치일기》.[14][15] In the document, 
+      hanbok was used to distinguish Korean clothing from Japanese traditional clothing and Western clothing. </p>
+    <p>Hanbok was used in an 1895 document describing the assassination of Empress Myeongseong to distinguish Korean clothing from Japanese clothing. <br>
+       The origin of the name remains unclear, because these documents predate the Korean Empire (Korean: 대한제국) which popularized the hanja character Han (Hanja: 韓).</p>
+ </main>
 
 
  
