--- a/pages/Occasions.html
+++ b/pages/Occasions.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Etmology</title>
+  <title>Occasions</title>
 </head>
 <body>
   <header>
-    <h1>Etmology</h1>
+    <h1>Occasions</h1>
   </header>
   <nav>
     <ul class="main-nav">
