--- a/pages/Modern-usage.html
+++ b/pages/Modern-usage.html
@@ -21,6 +21,17 @@
     </ul>
  </nav>
 
+ <main>
+
+  <p>
+    Hanbok has been featured in international haute couture; on the catwalk, in 2015 when Karl Lagerfield dressed Korean models for Chanel, and during Paris Fashion Week in photography by Phil Oh.
+    It has also been worn by international celebrities, such as Britney Spears and Jessica Alba, and athletes, such as tennis player Venus Williams and football player Hines Ward.<br>
+    Hanbok is also popular among Asian-American celebrities, such as Lisa Ling and Miss Asia 2014, Eriko Lee Katayama.
+    It has also made appearances on the red carpet, and was worn by Sandra Oh at the SAG Awards, and by Sandra Oh's mother who made fashion history in 2018 for wearing a hanbok to the Emmy Awards.[123
+  </p>
+
+ </main>
+
 
  <footer>
   <p>© 2022 For Gymnasium Project<br> The text content of this site was borrowed from <a href="https://en.wikipedia.org/wiki/Hanbok">
